Closed Bug 37874 Opened 24 years ago Closed 24 years ago

Error -201 during install on Win95 system in network

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect, P3)

x86
Windows 95
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: hansbo, Assigned: ssu0262)

Details

(Whiteboard: [nsbeta2+])

Attachments

(1 file)

From Bugzilla Helper:
User-Agent: Mozilla/4.72 [en] (Win95; U)
BuildID:    5.0.16.20000050111

The installer gives an error '-201: Error occured during install' while 
installing the newest nightly builds on a Win95 system in a WinNT network. I do 
not have write permission for the 'start menu' entries. It started with the 
M16-nightlies. I can install M15 without problem.

Reproducible: Always
Steps to Reproduce:
1. Download newest nightly build Win32-installer.exe
2. Run installer
3. Choose complete install to empty directory
Some explenation with the install.log:
I don't have write permission on \\NT01
Could it be failing because of that?
Hi Hans,

That's probably exactly what the problem is.  We use the following registry 
key (under Win95) to locate where the Start Menu folder is located at:
  
HKEY_CURRENT_USER\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\Shell 
Folders\Programs

It looks to me that it has a value of "\\NT01\userprog".  Do you know if the 
system is booting remotely?  Do you also know if other apps are able to create 
shortcuts on your system?
Status: UNCONFIRMED → NEW
Ever confirmed: true
reassigning to myself.
Assignee: cathleen → ssu
if we fail to create shortcut, we should not completely stop the install 
process.

must fix in pr2
Keywords: nsbeta2
Putting on [nsbeta2+] radar for beta2 fix.
Whiteboard: [nsbeta2+]
Other apps are also unable to create shortcuts, but most just give a warning
about that and continue the install, as did Mozilla up to (and including) M15.

The system boots locally (has Win95 on a local disk) and when I login to the NT-
server the start menu is changed to "\\NT01\userprog".
fixed.  I check for write access now.  It the installer doesn't have write 
access, it'll cause a non-fatal error.  It will not create the shortcuts and 
will log it in the install.log file as ACCESS_DENIED (-202), but will continue 
with installation.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
The installer now works for me with the 2000051308-build. But I don't see the
error message in the install.log.
Build: 2000-05-18-09-M16(WIN)

Installation works plus I get the -202 error as expected.  Marking Verified!
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: