fixing bug #37874.  xpinstall now checks for write access before creating a windows shortcut.